# substrate

./: CLAUDE.md  LICENSE  README.md  flake.nix
.github/workflows/: action-release.yml  ai-stack.yml  ansible-collection-ansible-test.yml  ansible-collection-auto-bump.yml  ansible-collection-auto-merge.yml  ansible-collection-ci.yml  ansible-collection-docs-lint.yml  ansible-collection-integration-live.yml  ansible-collection-matrix.yml  ansible-collection-published-install.yml  ansible-collection-release.yml  ansible-collection-upstream-watch.yml  auto-bump.yml  auto-release-verify.yml  auto-release.yml  blackmatter-component-check.yml  caixa-auto-release.yml  caixa-forge.yml  caixa-publish-tlisp.yml  caixa-publish.yml  caixa-validate.yml  cargo-auto-release.yml  cargo-ci.yml  cargo-publish-each-member-auto-release.yml  cargo-release.yml  cd-stack.yml  comment-command-dispatch.yml  compliance-attest.yml  container-stack.yml  (+45 more)
.github/workflows.disabled/: blackmatter-component-check.yml
docs/: ACTION-AS-CAIXA.md  AST-GENERATION-OVER-FORMATS.md  AUTO-RELEASE.md  CAIXA-ECOSYSTEM-COVERAGE.md  CAIXA-FULL-SCHEMA.md  HARDENED-BASE-IMAGES.md  INTERLOCK.md  IRREDUCIBLE-PATTERNS.md  MIGRATING-TO-MODULE-TRIO.md  MINIMAL-PRODUCTION-IMAGE.md  RECIPES.md  adding-a-builder.md  adding-a-leptos-app.md  adding-an-architecture.md  architecture.md  convergence-application-theory.md  metaframework.md  migration.md  pangea-patterns.md  scaffolds.md  security.md  skill-updates.md  testing.md  unified-infrastructure-theory.md
examples/: convergence-bridge.nix  leptos-deploy.nix  leptos-helm-values.nix  leptos-tatara-jobspec.json  leptos-wasi-config.json  super-cache-ci-consumer.yml
lib/: ami-build.nix  ansible-collection.nix  blackmatter-component-flake.nix  completions.nix  config.nix  constellation-platform-infra-flake.nix  crate2nix-apps.nix  crate2nix-builders.nix  darwin-service-helpers.nix  darwin.nix  db-migration.nix  default.nix  dioxus-app-scaffold.nix  docker-helpers.nix  dotnet-build.nix  eframe.nix  environment-apps.nix  environment-config.nix  estante.nix  flake-wrapper.nix  fleet-pangea-infra-flake.nix  github-action.nix  go-docker.nix  go-grpc-service.nix  go-library-check.nix  go-monorepo-binary.nix  go-monorepo.nix  go-overlay.nix  go-tool-flake.nix  go-tool.nix  gpu-app-scaffold.nix  health-supervisor.nix  helm-build.nix  hm-claude-md-helpers.nix  hm-flake-fragment-helpers.nix  hm-mcp-helpers.nix  hm-secret-helpers.nix  hm-service-helpers.nix  hm-skill-helpers.nix  hm-tool-helpers.nix  (+70 more)
tools/oci-push/: Cargo.toml  DESIGN.md
tools/oci-push/src/: main.rs
tools/relver/: Cargo.toml
tools/relver/src/: lib.rs  main.rs
tools/relver/tests/: integration.rs
(+298 files in other folders)
